--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 asgiref==3.7.2
 backports.zoneinfo==0.2.1
+cloudinary==1.34.0
+dj-database-url==2.1.0
+dj3-cloudinary-storage==0.0.6
 Django==4.2.5
+gunicorn==21.2.0
+psycopg2==2.9.7
 python-dotenv==1.0.0
 sqlparse==0.4.4
+urllib3==1.26.16
