--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ dj-database-url==2.1.0
 dj3-cloudinary-storage==0.0.6
 Django==4.1
 gunicorn==21.2.0
-psycopg2==2.9.7
+psycopg2-binary==2.9.7
 python-dotenv==1.0.0
 sqlparse==0.4.4
 urllib3==1.26.16
