--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,8 @@
    "files.autoSave": "off",
    "workbench.colorTheme": "Monokai Pro",
    "terminal.integrated.gpuAcceleration": "canvas",
-   "editor.defaultFormatter": "HookyQR.beautify"
+   "editor.defaultFormatter": "HookyQR.beautify",
+   "[django-html]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+   }
 }
