--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
 asgiref==3.7.2
-backports.zoneinfo;python_version<"3.9"
+bleach==6.0.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
 cloudinary==1.34.0
 dj-database-url==2.1.0
 dj3-cloudinary-storage==0.0.6
 Django==4.1
+django-summernote==0.8.20.0
 gunicorn==21.2.0
+idna==3.4
+packaging==23.1
 psycopg2-binary==2.9.7
+pycodestyle==2.11.0
 python-dotenv==1.0.0
+requests==2.31.0
+six==1.16.0
 sqlparse==0.4.4
+typing_extensions==4.7.1
 urllib3==1.26.16
+webencodings==0.5.1
